--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,10 +1,23 @@
-.producto{
+.itemContainer{
+    display:inline-block;
+    align-items: center;
+    padding: 16px;
+}
+
+.itemContainer p{
+    font-size: 18px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     display: block;
+}
+
+.producto{
+    display: inline-block;
     width: 300px;
 }
 
 .producto img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit:cover;
 }
