--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -23,3 +23,21 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+.textCart{
+    margin-bottom: 30px;
+    margin-top: 30px;    
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.itemCart {
+    display: flex;
+    border-bottom: 1px;
+    max-width: 500px;
+    margin: 1rem auto;
+}
