--- a/src/components/ItemCart/ItemCart.css
+++ b/src/components/ItemCart/ItemCart.css
@@ -1,12 +1,12 @@
 .itemCart {
     display: flex;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px;
     max-width: 500px;
     margin: 1rem auto;
 }
 
 .itemCart img{
-    width: 200px;
+    width: 300px;
     margin-right: 1rem;
 }
 
